[tool.poetry]
name = "congress-trading-strategy"
version = "0.1.0"
description = ""
authors = ["microHoffman <skozak@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
backtesting = "^0.3.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
